@@ -3,6 +3,7 @@ use warnings;
 use Test::More;
 
 use lib qw(t/lib);
+use DBICTest;
 use DBICTest::ForeignComponent;
 
 #   Tests if foreign component was loaded by calling foreign's method
