@@ -4,6 +4,9 @@ use strict;
 use Test::More;
 use Test::Exception;
 
+use lib 't/lib';
+use DBICTest;
+
 throws_ok (
   sub {
     package BuggyTable;
