@@ -16,7 +16,6 @@ BEGIN {
 
 use File::Spec;
 use Path::Class qw/dir/;
-use File::Path qw/make_path remove_tree/;
 
 lives_ok( sub {
     my $parse_schema = DBICTest->init_schema(no_deploy => 1);
@@ -26,13 +25,11 @@ lives_ok( sub {
 
 my $schema = DBICTest->init_schema();
 
-my $var = dir (qw| t var create_ddl_dir |);
--d $var
-    or make_path( "$var" )
-    or die "can't create $var: $!";
+my $var = dir ("t/var/ddl_dir-$$");
+$var->mkpath unless -d $var;
 
 my $test_dir_1 = $var->subdir ('test1', 'foo', 'bar' );
-remove_tree( "$test_dir_1" ) if -d $test_dir_1;
+$test_dir_1->rmtree if -d $test_dir_1;
 $schema->create_ddl_dir( undef, undef, $test_dir_1 );
 
 ok( -d $test_dir_1, 'create_ddl_dir did a make_path on its target dir' );
@@ -41,6 +38,10 @@ ok( scalar( glob $test_dir_1.'/*.sql' ), 'there are sql files in there' );
 TODO: {
     local $TODO = 'we should probably add some tests here for actual deployability of the DDL?';
     ok( 0 );
+}
+
+END {
+  $var->rmtree;
 }
 
 done_testing;
