@@ -3,7 +3,7 @@ use warnings;
 use Test::More;
 use Benchmark;
 use lib qw(t/lib);
-use DBICTest; # do not remove even though it is not used
+use DBICTest ':GlobalLock';
 
 # This is a rather unusual test.
 # It does not test any aspect of DBIx::Class, but instead tests the
